--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "fastclick": "^1.0.6",
     "babel-runtime": "^6.0.0",
-    "jsonp": "0.2.1"
+    "better-scroll": "^1.15.1",
+    "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
+    "jsonp": "0.2.1",
+    "vue": "^2.6.11",
+    "vue-lazyload": "^1.0.3",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
