--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.6.11",
     "vue-lazyload": "^1.0.3",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "create-keyframe-animation": "^0.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
