--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "vue-lazyload": "^1.0.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
-    "create-keyframe-animation": "^0.1.0"
+    "create-keyframe-animation": "^0.1.0",
+    "js-base64": "^2.1.9",
+    "lyric-parser": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
