--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vuex": "^3.4.0",
     "create-keyframe-animation": "^0.1.0",
     "js-base64": "^2.1.9",
-    "lyric-parser": "^1.0.1"
+    "lyric-parser": "^1.0.1",
+    "good-storage": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
